--- a/2-style.css
+++ b/2-style.css
@@ -2,6 +2,9 @@ a {
   color:black;
   text-decoration:none;
 }
+a li:hover{
+  background-color: yellow;
+}
 h1 {
   font-size:60px;
   text-align:center;
